--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 body{
-  background-color: #fff;
+  background-color: #00ffb2;
 }
 nav{
-  position: absolute;
+  position: relative;
+  width: 100%;
+  height: 30%;
 }
 ul{
-  top:115px;
-  left:50%;
   color:#000;
   width: 100%;
-  height: 40%;
-  background-color: #000;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 li{
-  background-color: #fff;
+  background-color: #000;
   border-radius: 50%;
   display: inline-block;
   width: 19%;
+  height: 100%;
+  opacity: 0;
+}
+li:nth-child(3){
+  opacity: 1;
+}
+li:nth-child(3):hover{
+  background-color: #fff6e5;
 }
