--- a/style.css
+++ b/style.css
@@ -1,29 +1,54 @@
 body{
-  background-color: #00ffb2;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 nav{
-  position: relative;
   width: 100%;
-  height: 30%;
+  height: 20%;
 }
 ul{
-  color:#000;
-  width: 100%;
+  color:#fff;
+  padding: 0 !important;
+  margin: 0 !important;
   list-style: none;
-  padding: 0;
-  margin: 0;
 }
 li{
-  background-color: #000;
-  border-radius: 50%;
-  display: inline-block;
-  width: 19%;
-  height: 100%;
   opacity: 0;
+  position: absolute;
+  left: 46%;
+  top: 20%;
+  -webkit-transition: .5s ease-in-out;
+-moz-transition: .5s ease-in-out;
+-o-transition: .5s ease-in-out;
+transition: .5s ease-in-out;
+cursor: pointer;
 }
 li:nth-child(3){
   opacity: 1;
+  border-radius: 9px;
+  background-color:blue;
+  color: #fff;
+  z-index: 1;
 }
 li:nth-child(3):hover{
-  background-color: #fff6e5;
+}
+li.open{
+  border-radius: 9px;
+  border-style: solid;
+  border-color: #000;
+}
+#farLeft.open{
+  left: 16.66%;
+  background-color: yellow;
+}
+#nearLeft.open{
+  background-color: green;
+}
+#nearRight.open{
+  background-color: red;
+}
+#farRight.open{
+  left: 83.2%;
+  background-color: purple;
 }
