--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ nav{
   height: 20%;
 }
 ul{
-  color:#fff;
   padding: 0 !important;
   margin: 0 !important;
   list-style: none;
@@ -16,36 +15,36 @@ ul{
 li{
   opacity: 0;
   position: absolute;
-  left: 46%;
+  left: 50%;
   top: 20%;
-  -webkit-transition: .5s ease-in-out;
--moz-transition: .5s ease-in-out;
--o-transition: .5s ease-in-out;
-transition: .5s ease-in-out;
-cursor: pointer;
 }
 li:nth-child(3){
   opacity: 1;
   border-radius: 9px;
-  background-color:blue;
-  color: #fff;
+  background-color:#fff;
+  color: #000;
   z-index: 1;
 }
-li:nth-child(3):hover{
-}
+
 li.open{
   border-radius: 9px;
   border-style: solid;
   border-color: #000;
+  -webkit-transition: .5s ease-in-out;
+-moz-transition: .5s ease-in-out;
+-o-transition: .5s ease-in-out;
+transition: .5s ease-in-out;
 }
 #farLeft.open{
   left: 16.66%;
   background-color: yellow;
 }
 #nearLeft.open{
+  left: 33.33%;
   background-color: green;
 }
 #nearRight.open{
+  left: 66.66%;
   background-color: red;
 }
 #farRight.open{
